filegroup(
    name = "package-srcs",
    srcs = glob(["**"], exclude=["bazel-*/**", ".git/**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//config:all-srcs",
        "//def:all-srcs",
        "//hack:all-srcs",
        "//images:all-srcs",
        "//legacy:all-srcs",
        "//prow:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
