load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/example/project
gazelle(name = "gazelle")

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
        ],
    ),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//config:all-srcs",
        "//hack:all-srcs",
        "//images/bazelbuild:all-srcs",
        "//images/builder:all-srcs",
        "//prow:all-srcs",
        "//tools/image-bumper:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
