package(default_visibility = ["//visibility:public"])

sh_test(
    name = "verify",
    srcs = ["verify.sh"],
    data = [
        ":yaml",
        ":checkconfig",
    ],
)

genrule(
    name = "get_checkconfig",
    srcs = ["@test_infra//prow/cmd/checkconfig"],
    outs = ["checkconfig"],
    cmd = "cp $(SRCS) $@",
)

filegroup(
    name = "yaml",
    srcs = glob(["**/*.yaml"]),
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:private"],
)
