package(default_visibility = ["//visibility:public"])

sh_test(
    name = "verify",
    srcs = ["verify.sh"],
    data = [
        ":checkconfig",
        ":yaml",
    ],
)

genrule(
    name = "get_checkconfig",
    srcs = ["@test_infra//prow/cmd/checkconfig"],
    outs = ["checkconfig"],
    cmd = "cp $(SRCS) $@",
)

filegroup(
    name = "yaml",
    srcs = glob(["**/*.yaml"]),
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
