package(default_visibility = ["//visibility:public"])

py_test(
    name = "verify-boilerplate",
    srcs = ["verify-boilerplate.py"],
    data = ["//:all-srcs"],
)

sh_binary(
    name = "update-kazel",
    srcs = ["update-kazel.sh"],
    data = [
        ":kazel",
    ],
)

sh_test(
    name = "verify-kazel",
    srcs = ["verify-kazel.sh"],
    data = [
        ":kazel",
        "//:all-srcs",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

genrule(
    name = "getkazel",
    srcs = ["@io_kubernetes_build//kazel"],
    outs = ["kazel"],
    cmd = "cp $(SRCS) $@",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//hack/boilerplate:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
