load("@io_bazel_rules_go//go:def.bzl", "go_binary")

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//images/alpine:all-srcs",
        "//images/bazelbuild:all-srcs",
        "//images/katacoda-lint:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "barnacle",
    embed = ["@test_infra//images/bootstrap/barnacle:go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)
