filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//images/alpine:all-srcs",
        "//images/bazelbuild:all-srcs",
        "//images/golang-dind:all-srcs",
        "//images/katacoda-lint:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
