filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//legacy/images/gcloud:all-srcs",
        "//legacy/images/minikube-in-go:all-srcs",
        "//legacy/images/tarmak:all-srcs",
        "//legacy/bootstrap:all-srcs",
        "//legacy/jobs:all-srcs",
        "//legacy/scenarios:all-srcs",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:private"],
)
