filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//legacy/bootstrap:all-srcs",
        "//legacy/images/gcloud-in-go:all-srcs",
        "//legacy/images/minikube-in-go:all-srcs",
        "//legacy/jobs:all-srcs",
        "//legacy/scenarios:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
