filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//prow/bump:all-srcs",
        "//prow/cluster:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
