load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

container_bundle(
    name = "alpine",
    images = {
        "{IMAGE_DOCKER_REPO}/alpine:{IMAGE_DOCKER_TAG}": "@alpine//image",
    },
    stamp = True,
)

docker_push(
    name = "push",
    bundle = ":alpine",
)
