filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")

container_bundle(
    name = "bundle",
    images = {
        "{IMAGE_DOCKER_REPO}/bazelbuild:{IMAGE_DOCKER_TAG}": "@bazelbuild//image",
    },
    stamp = True,
)
