load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@bazelbuild//image.0.16.1",
    files = [
        ":create_bazel_cache_rcs.sh",
        ":runner",
        "//hack:coalesce.py",
        "//images:barnacle",
    ],
    symlinks = {
        "/usr/local/bin/barnacle": "/barnacle",
        "/usr/local/bin/runner": "/runner",
        "/usr/local/bin/coalesce.py": "/coalesce.py",
        "/usr/local/bin/create_bazel_cache_rcs.sh": "/create_bazel_cache_rcs.sh",
    },
    visibility = ["//visibility:public"],
)

container_bundle(
    name = "bazelbuild",
    images = {
        "{STABLE_IMAGE_DOCKER_REPO}/bazelbuild:{STABLE_IMAGE_DOCKER_TAG}-0.16.1": ":image",
    },
    stamp = True,
)

docker_push(
    name = "push",
    bundle = ":bazelbuild",
)
