load("//prow:prow.bzl", "release", "component", "MULTI_KIND", "BUILD_CONTEXT")

# Usage:
#   bazel run //prow/cluster:production.apply
release(
    "production",
    # component("build", "deployment"),
    # component("build_rbac", MULTI_KIND),
    component("crier", "deployment"),
    component("crier_rbac", MULTI_KIND),
    component("deck", "service", "deployment"),
    component("gce-ssd-retain", "storageclass"),
    component("ghproxy", MULTI_KIND),
    # component(
    #     "grandmatriarch",
    #     MULTI_KIND,
    #     cluster = BUILD_CONTEXT,
    # ),
    component("hook", "service", "deployment"),
    component("horologium", "deployment"),
    # component("cert-manager", MULTI_KIND),
    # component("cluster-issuer", MULTI_KIND),
    component(
        "mem-limit-range",
        "limitrange",
        cluster = BUILD_CONTEXT,
    ),
    component("plank", "deployment"),
    component("prowjob", "customresourcedefinition"),
    component("pushgateway", "deployment"),
    component("sinker", "deployment"),
    component("tide", "service", "deployment"),
    component("tls-ing", "ingress"),
    component("tot", "service", "deployment"),
    component("needs-rebase", "deployment"),
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
