load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    # we can reuse the bazelbuild base image
    base = "//images/bazelbuild:image-0.18.0",
)

container_bundle(
    name = "e2e",
    images = {
        "{STABLE_IMAGE_DOCKER_REPO}/cert-manager-e2e:{STABLE_IMAGE_DOCKER_TAG}-0.18.0": ":image",
    },
    stamp = True,
)

docker_push(
    name = "push",
    bundle = ":e2e",
)
