load("//def:bootstrap.bzl", "bootstrap_image_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

bootstrap_image_bundle(
    name = "gcloud-in-go",
    images = {
        "{IMAGE_DOCKER_REPO}/gcloud-in-go:{IMAGE_DOCKER_TAG}": "@gcloud-in-go//image",
    },
    stamp = True,
)

docker_push(
    name = "push",
    bundle = ":gcloud-in-go",
)
