load("//def:bootstrap.bzl", "bootstrap_image", "bootstrap_image_bundle")

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

bootstrap_image_bundle(
    name = "bundle",
    images = {
        "{IMAGE_DOCKER_REPO}/minikube-in-go:{IMAGE_DOCKER_TAG}-v1.9.6": "@minikube-in-go//image.v1.9.6",
        "{IMAGE_DOCKER_REPO}/minikube-in-go:{IMAGE_DOCKER_TAG}-v1.8.10": "@minikube-in-go//image.v1.8.10",
        "{IMAGE_DOCKER_REPO}/minikube-in-go:{IMAGE_DOCKER_TAG}-v1.7.15": "@minikube-in-go//image.v1.7.15",
    },
    stamp = True,
)
