load("//def:bootstrap.bzl", "bootstrap_image_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

# bootstrap_image_bundle(
#     name = "minikube-in-go",
#     images = {
#         "{STABLE_IMAGE_DOCKER_REPO}/minikube-in-go:{STABLE_IMAGE_DOCKER_TAG}-v1.9.6": "@minikube-in-go//image.v1.9.6",
#         "{STABLE_IMAGE_DOCKER_REPO}/minikube-in-go:{STABLE_IMAGE_DOCKER_TAG}-v1.8.10": "@minikube-in-go//image.v1.8.10",
#         "{STABLE_IMAGE_DOCKER_REPO}/minikube-in-go:{STABLE_IMAGE_DOCKER_TAG}-v1.7.15": "@minikube-in-go//image.v1.7.15",
#     },
#     stamp = True,
# )

# docker_push(
#     name = "push",
#     bundle = ":minikube-in-go",
# )
