filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//images/tarmak/ruby:all-srcs",
        "//images/tarmak/sphinx-docs:all-srcs",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:private"],
)
