filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//legacy/images/tarmak/ruby:all-srcs",
        "//legacy/images/tarmak/sphinx-docs:all-srcs",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:private"],
)
