filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//legacy/images/tarmak/ruby:all-srcs",
        "//legacy/images/tarmak/sphinx-docs:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
